[gd_scene load_steps=3 format=3 uid="uid://ynu2n3e4gm0r"]

[ext_resource type="Script" path="res://scenes/park_scene.gd" id="1_14dx1"]
[ext_resource type="Texture2D" uid="uid://dmqkskraikn52" path="res://images/Barkasana_Composition.jpg" id="2_040oa"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_14dx1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_040oa")
expand_mode = 2
stretch_mode = 5

[node name="JukeBoxButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 709.0
offset_top = 230.0
offset_right = -262.0
offset_bottom = -306.0
grow_horizontal = 2
grow_vertical = 2

[node name="SausageButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 949.0
offset_top = 238.0
offset_right = -53.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2

[node name="FrisbeeButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 278.0
offset_top = 253.0
offset_right = -674.0
offset_bottom = -289.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShitButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = 275.0
offset_right = -890.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="TextureRect/JukeBoxButton" to="." method="_on_juke_box_button_pressed"]
[connection signal="pressed" from="TextureRect/SausageButton" to="." method="_on_sausage_button_pressed"]
[connection signal="pressed" from="TextureRect/FrisbeeButton" to="." method="_on_frisbee_button_pressed"]
[connection signal="pressed" from="TextureRect/ShitButton" to="." method="_on_shit_button_pressed"]
